[tool.poetry]
name = "blog-tool"
version = "0.1.0"
description = "A command-line tool for publishing articles to tech blogging platforms."
authors = ["Luc Shelton <lucshelton@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/loveduckie/portfolio-blog"
repository = "https://github.com/loveduckie/portfolio-blog"
documentation = "https://github.com/loveduckie/portfolio-blog/-/wikis/home"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.3.7"
requests = "^2.27.1"
rich-click = "^1.3.1"
autopep8 = "^1.6.0"
pydantic = "^1.9.0"
pendulum = "^2.1.2"
python-dotenv = "^0.20.0"
questionary = "^1.10.0"
gql = { extras = ["all"], version = "^3.3.0" }
rich = "^12.6.0"
cryptography = "^38.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blog-tool = 'blog_tool.__main__:cli'
imgur = 'blog_tool.imgur_upload:cli'

[tool.poetry_bumpversion.file."blog-tool/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
